src/templating/snapshots/yolk__templating__parser__test__error_multiline_with_else.snap
---
source: src/templating/parser.rs
expression: "render_error(parse_document(\"{%f%}\\n{%else%}\\n{%end%}\").unwrap_err())"
---
  × Failed to parse yolk template file

Error: 
  × Expected valid element.
   ╭─[file:1:6]
 1 │ {%f%}
   ·      ┬
   ·      ╰── here
 2 │ {%else%}
 3 │ {%end%}
   ╰────
